--- a/study_schedule_app/study_schedule_app/study_schedule_app.vcxproj
+++ b/study_schedule_app/study_schedule_app/study_schedule_app.vcxproj
@@ -130,11 +130,14 @@
     <ClCompile Include="day.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="task.cpp" />
+    <ClCompile Include="time.cpp" />
+    <ClCompile Include="week.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="day.h" />
     <ClInclude Include="task.h" />
     <ClInclude Include="time.h" />
+    <ClInclude Include="week.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
